New excercises added

--- a/figuras.html
+++ b/figuras.html
@@ -7,7 +7,19 @@
     <title>Figuras | Ej 1</title>
 </head>
 <body>
-    <h1>🔺Figuras🔺</h1>
+    <header>
+        <h1>Figuras geometricas</h1>
+        <p>Este es el primer taller sobre JavaScript</p>
+    </header>
+    <section>
+        <h2>Calcula el área y perimetro de un cuadrado</h2>
+        <form>
+            <label for="InputCuadrado">Escribe cuanto mide cada lado de tu cuadrado:</label>
+            <input id="InputCuadrado" type="number"/>
+            <button type="button" onclick="calcularPerimetroCuadrado()">Calcular perimetro</button>
+            <button type="button" onclick="calcularAreaCuadradoa()">Calcular área</button>
+        </form>
+    </section>
     <script src="./figuras.js"></script>
 </body>
 </html>
